# embedding-layers

./: README.md  pyproject.toml
app/: streamlit_app.py
src/embedding_layers/: __init__.py  corpus.py  dataset_sources.py  distances.py  evaluation.py  hybrid.py  lexical.py  preprocessing.py  projection.py  ranking.py  semantic.py
tests/: test_dataset_sources.py  test_evaluation.py  test_preprocessing.py  test_projection.py  test_retrieval.py
