[project]
name = "embedding-layers"
version = "0.1.0"
description = "A Streamlit PoC that contrasts lexical, semantic, and hybrid embedding layers."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Reinaldo Peres" }]
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.4.0",
  "streamlit>=1.36.0",
  "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "ruff>=0.5.0"]
datasets = ["datasets>=2.20.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/embedding_layers"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
